# magpy_rv

./: (1)_no_model_tutorial.ipynb  (2)_polynomial_tutorial.ipynb  .gitignore  .readthedocs.yaml  Auxiliary.py  Check.py  GP_Likelihood.py  GP_solar.py  GP_solar_multi_batman.py  Get.py  Kernels.py  LICENSE  Likelihood.py  MCMC.py  MCMC_affine_multi_batman.py  MCMC_aux.py  Models.py  Parameter.py  Parameters.py  Priors.py  README.md  auxiliary.py  auxiliary_batman.py  data creator.py  env.yaml  magpy_rv-1.0.1-py3-none-any.whl  mass_calc.py  new_plotting.py  new_test_launcher.ipynb  planetary_plots.py  plotting.py  plotting_batman.py  pyproject.toml  saving.py  test.ipynb
base/: GP_solar_multi.py  MCMC_affine.py  MCMC_affine_multi.py  data creator.py  plotting.py
doc/: README.rst
docs/: requirements.txt
docs/tutorials/: (1)_no_model_tutorial.ipynb  (2)_polynomial_tutorial.ipynb  (3)_51_peg_tutorial.ipynb  2_polynomial_tutorial.ipynb
launchers/: launcher.py  launcher_HD48948.py  launcher_TOI2134.py  launcher_debug.py
old_code/: GP_solar_multi.py  MCMC_affine_multi.py  plotting.py
source/: 1_no_model_tutorial.ipynb  api.rst  auxiliary_api.rst  conf.py  gettingstarted.rst  gp_likelihood_api.rst  index.rst  install.rst  kernel_api.rst  mcmc_api.rst  mcmc_aux_api.rst  model_api.rst  parameter_api.rst  plotting_api.rst  requirements.txt  saving_api.rst
source/tutorials/: 1_no_model_tutorial.ipynb  2_polynomial_tutorial.ipynb  3_51_peg_tutorial.ipynb
source/tutorials/51Peg_timeseries/: 51 Peg_ELODIE_DRS-TACOS.rdb  51 Peg_ELODIE_Pub-2004.rdb  51 Peg_HAMILTON_Pub-1997.rdb  51 Peg_HAMILTON_Pub-2006.rdb  51 Peg_HIRES_Pub-2017.rdb
src/MAGPy_RV/: GP_Likelihood.py  Kernels.py  MCMC.py  MCMC_aux.py  Models.py  auxiliary.py  plotting.py  saving.py
src/magpy_r/: auxiliary.py  gp_likelihood.py  mcmc.py  mcmc_aux.py  models.py  plotting.py  saving.py
src/magpy_rv/: auxiliary.py  gp_likelihood.py  kernels.py  mcmc.py  mcmc_aux.py  models.py  parameters.py  plotting.py  saving.py
