[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magpy_rv"
version = "0.0.1"
authors = [
  {name="Federica Rescigno", email="fr307@exeter.ac.uk" },
  {name="Ben S Lakeland"},
  {name="Bryce Dixon"},
]
maintainers = [
    {name="Federica Rescigno", email="fr307@exeter.ac.uk" },
    {name="Ben S Lakeland"},
]
description = "Gaussian Process Regression with affine invariant MCMC algorithm"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "numpy",
    "scipy>=1.7.3",
    "matplotlib>=3.3.1",
    "seaborn>=0.12.0",
    "pandas>=1.3.5",
]


[project.urls]
"Homepage" = "https://github.com/frescigno/MAGPy_RV"
"Bug Tracker" = "https://github.com/frescigno/MAGPy_RV/issues"
"ReadtheDocs" = "https://magpy-rv.readthedocs.io/en/latest/"